--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </div>
     <div class="menu">
         <h2>Tugas Arsitektur dan Teknologi Big Data</h2>
-        <h5>Nama : Ahmad Zaki Firdaus</h5>
+        <h5>Nama : AZF</h5>
         <h5>NIM : 21/479669/PA/20795</h5>
       </div>
       
